--- a/.github/workflows/deploy-site.yml
+++ b/.github/workflows/deploy-site.yml
@@ -16,15 +16,16 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         
-      - name: Deploy to branch
-        uses: anna-money/github-actions-npm@v2
-        with:
-          target: deploy
+      - name: npm install, deploy
+        run: |
+          npm install
+          npm run deploy
       
       - name: Deploy to ECS
         uses: appleboy/ssh-action@v0.1.4
         with:
           host: xupeng.name
-          username: ''
-          password: ''
-          script: ''
+          key: ${{ secrets.SITE_KEY }}
+          script: |
+            cd /var/www/xupeng.name
+            git --version
