build: 构建工作流显示 Nodejs 版本

--- a/.github/workflows/deploy-site.yml
+++ b/.github/workflows/deploy-site.yml
@@ -22,6 +22,7 @@ jobs:
           echo '${{ secrets.GH_KEY }}' > ~/.ssh/id_ed25519
           chmod 400 ~/.ssh/id_ed25519
 
+          node -v
           npm install
           npm run deploy
 
