build: 更新构建工作流

--- a/.github/workflows/deploy-site.yml
+++ b/.github/workflows/deploy-site.yml
@@ -23,6 +23,8 @@ jobs:
           chmod 400 ~/.ssh/id_ed25519
 
           npm install
+          npx hexo clean
+          npx hexo generate
           npx hexo deploy
 
           rm ~/.ssh/id_ed25519
